add lombok to other classes, add dto NbpPersonse, change resttemplate in CurrencyService to webclient